--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>online-shop</title>
+    <link href="static/css/normalize.css" type="text/css"/>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
